--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<div class="header">
 		<div>
-			<img src="/images/taijitu.png" alt="yin yang image">
+			<img src="images/taijitu.png" alt="yin yang image">
 		</div>
 		<div>
 			<ul>
